--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -70,7 +70,7 @@
         <item name="shapeAppearanceLargeComponent">@style/ShapeAppearance.App.LargeComponent</item>
 
         <!-- Component Styles -->
-        <item name="materialButtonStyle">@style/Widget.App.Button</item>
+        <item name="materialButtonStyle">@style/Widget.App.Button.Outlined</item>
         <item name="materialCardViewStyle">@style/Widget.App.CardView</item>
         <item name="chipStyle">@style/Widget.App.Chip</item>
         <item name="textInputStyle">@style/Widget.App.TextInputLayout</item>
@@ -230,26 +230,6 @@
     <!-- COMPONENT STYLES                             -->
     <!-- ============================================ -->
 
-    <style name="Widget.App.Button" parent="Widget.Material3.Button">
-        <item name="android:minHeight">48dp</item>
-        <item name="android:paddingStart">24dp</item>
-        <item name="android:paddingEnd">24dp</item>
-        <item name="cornerRadius">12dp</item>
-        <item name="iconGravity">textStart</item>
-        <item name="iconPadding">8dp</item>
-        <item name="android:textAppearance">@style/TextAppearance.App.LabelLarge</item>
-        <item name="android:stateListAnimator">@animator/button_elevation</item>
-    </style>
-
-    <style name="Widget.App.Button.Filled" parent="Widget.Material3.Button">
-        <item name="backgroundTint">@color/md_theme_dark_primary</item>
-        <item name="android:textColor">@color/md_theme_dark_onPrimary</item>
-    </style>
-
-    <style name="Widget.App.Button.FilledTonal" parent="Widget.Material3.Button.TonalButton">
-        <item name="backgroundTint">@color/md_theme_dark_secondaryContainer</item>
-        <item name="android:textColor">@color/md_theme_dark_onSecondaryContainer</item>
-    </style>
 
     <style name="Widget.App.Button.Outlined" parent="Widget.Material3.Button.OutlinedButton">
         <item name="strokeColor">@color/md_theme_dark_outline</item>
@@ -257,7 +237,9 @@
         <item name="android:textColor">@color/md_theme_dark_primary</item>
     </style>
 
-    <style name="Widget.App.Button.Text" parent="Widget.Material3.Button.TextButton">
+    <style name="Widget.App.Button.Text" parent="Widget.Material3.Button.OutlinedButton">
+        <item name="strokeColor">@color/md_theme_dark_outline</item>
+        <item name="strokeWidth">1dp</item>
         <item name="android:textColor">@color/md_theme_dark_primary</item>
     </style>
 
@@ -324,7 +306,7 @@
         <item name="android:stateListAnimator">@animator/card_elevation</item>
     </style>
 
-    <style name="TVButton" parent="Widget.App.Button">
+    <style name="TVButton" parent="Widget.App.Button.Outlined">
         <item name="android:textSize">18sp</item>
         <item name="android:minHeight">56dp</item>
     </style>
