--- a/app/src/main/res/layout/dialog_stream_selection.xml
+++ b/app/src/main/res/layout/dialog_stream_selection.xml
@@ -50,10 +50,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Cancel"
-        android:layout_marginTop="16dp"
-        style="@style/Widget.MaterialComponents.Button.TextButton"
+        android:textSize="14sp"
+        android:paddingHorizontal="8dp"
+        android:paddingVertical="4dp"
+        android:focusable="true"
+        android:background="@drawable/selector_button_outlined_focus"
+        app:backgroundTint="@null"
+        app:icon="@drawable/ic_exit_to_app"
+        app:iconSize="20dp"
         app:layout_constraintTop_toBottomOf="@id/rvStreams"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        style="@style/Widget.Material3.Button.OutlinedButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
