--- a/app/src/main/res/layout/fragment_search_new.xml
+++ b/app/src/main/res/layout/fragment_search_new.xml
@@ -90,7 +90,7 @@
 
                     <Button
                         android:id="@+id/searchButton"
-                        style="@style/Widget.App.Button"
+                        style="@style/Widget.Material3.Button.OutlinedButton"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Search"
@@ -193,22 +193,26 @@
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintWidth_percent="0.4">
 
+                        <!-- CHANGED: Logo container fixed width/height -->
                         <FrameLayout
                             android:id="@+id/logoContainer"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_width="wrap_content"
+                            android:layout_height="120dp"
+                            android:minWidth="150dp"
                             android:padding="4dp"
                             android:layout_marginBottom="@dimen/spacing_sm">
 
+                            <!-- CHANGED: Wrap content width -->
                             <ImageView
                                 android:id="@+id/detailLogo"
-                                android:layout_width="match_parent"
-                                android:layout_height="100dp"
+                                android:layout_width="300dp"
+                                android:layout_height="120dp"
                                 android:adjustViewBounds="true"
                                 android:contentDescription="Content Logo"
                                 android:scaleType="fitCenter"
                                 android:visibility="gone"
-                                tools:src="@drawable/movie" />
+                                tools:src="@drawable/movie"
+                                tools:visibility="visible" />
 
                             <TextView
                                 android:id="@+id/detailTitle"
@@ -262,13 +266,12 @@
 
                     </LinearLayout>
 
-                    <androidx.core.widget.NestedScrollView
+                    <!-- CHANGED: Fixed height 120dp -->
+                    <ScrollView
                         android:layout_width="0dp"
-                        android:layout_height="match_parent"
+                        android:layout_height="120dp"
                         android:padding="4dp"
-                        android:fadeScrollbars="true"
-                        android:overScrollMode="never"
-                        android:scrollbars="none"
+                        android:scrollbars="vertical"
                         app:layout_constraintStart_toEndOf="@id/metaColumn"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintWidth_percent="0.6">
@@ -284,7 +287,7 @@
                             android:paddingRight="8dp"
                             tools:text="In a world where technology has advanced beyond imagination, humanity faces its greatest challenge yet." />
 
-                    </androidx.core.widget.NestedScrollView>
+                    </ScrollView>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
