--- a/app/src/main/res/layout/fragment_livetv.xml
+++ b/app/src/main/res/layout/fragment_livetv.xml
@@ -68,6 +68,8 @@
             android:layout_weight="1"
             android:clipToPadding="false"
             android:padding="8dp"
+            android:nextFocusRight="@id/detailsCard"
+            android:nextFocusLeft="@layout/netflix_sidebar"
             tools:listitem="@layout/item_tv_channel" />
 
         <!-- Details Pane -->
@@ -78,6 +80,7 @@
             android:layout_marginStart="16dp"
             app:cardBackgroundColor="@color/md_theme_surfaceContainer"
             app:cardCornerRadius="@dimen/corner_radius_medium"
+            android:nextFocusLeft="@id/rvTVGuide"
             app:cardElevation="8dp">
 
             <ScrollView
