Update visual assets

--- a/app/src/main/res/layout/fragment_search_new.xml
+++ b/app/src/main/res/layout/fragment_search_new.xml
@@ -226,7 +226,7 @@
                                 android:minHeight="36dp"
                                 android:focusable="true"
                                 android:nextFocusDown="@id/resultsRecycler"
-                                app:icon="@drawable/ic_play_arrow"
+                                app:icon="@drawable/ic_play_circle"
                                 app:iconGravity="textStart"
                                 app:iconPadding="4dp"
                                 app:iconSize="20dp"
@@ -245,7 +245,7 @@
                                 android:minHeight="36dp"
                                 android:focusable="true"
                                 android:nextFocusDown="@id/resultsRecycler"
-                                app:icon="@drawable/ic_related"
+                                app:icon="@drawable/ic_search"
                                 app:iconGravity="textStart"
                                 app:iconPadding="4dp"
                                 app:iconSize="20dp"
